--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<resources>
+    <string name="zaloguj">Zaloguj</string>
+    <string name="login" />
+    <string name="password" />
+</resources>
