--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="zaloguj">Zaloguj</string>
     <string name="login" />
     <string name="password" />
+    <color name="white">#CAADD8E6</color>
 </resources>
