--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login" />
     <string name="password" />
     <color name="white">#CAADD8E6</color>
+    <string name="title_activity_gps">Map</string>
 </resources>
